<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">番茄钟</string>
    <string name="plan">计划</string>
    <string name="today_event">今日事件</string>
    <string name="today">今日</string>
    <string name="date_select">日期选择</string>
    <string name="record">记录</string>
    <string name="add">添加</string>
    <string name="event_time">事件时间</string>
    <string name="set_time">时间设置</string>
    <string name="set_plan_time">计划时间设置</string>
    <string name="complete_time">完成日期</string>
    <string name="alert_info">提醒</string>
    <string name="change_to_today">该任务不是今日任务，是否改为现在完成？</string>
    <string name="mission_complete">任务完成！</string>
    <string name="mission_failed">任务失败！</string>
    <string name="set_sound">音频设置</string>
    <string name="sound">音频</string>
    <string name="minute">分钟</string>
    <string name="setting">设置</string>
    <string name="event_name">事件名称</string>
    <string name="error_info">错误信息</string>
    <string name="not_set_time">未设置时间</string>
    <string name="add_failed">添加错误</string>
    <string name="error_empty_name">名称不能为空</string>
    <string name="add_success">添加成功</string>
    <string name="if_give_up">是否决定放弃？</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="add_today_event">添加今日事件</string>
    <string name="add_event">添加事件</string>
    <string name="edit_name">编辑名称</string>
    <string name="if_delete_old">是否确定删除今天之前的事件？</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_confirm">确认删除</string>
    <string name="if_delete">是否删除？</string>
    <string name="comment">评论</string>
    <string name="grade">评分</string>
    <string name="times_up">时间到！</string>
    <string name="initial_real_time">00:00:000</string>
    <string name="alert_title">番茄钟提醒</string>
    <string name="alert_message">今日有任务，请及时完成。</string>
    <string name="today_blank_info">今日暂无任务~~</string>
</resources>
