<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">
    <AnalogClock
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/analog_clock"/>

    <DigitalClock
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14pt"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/plan"
            android:id="@+id/btn_plan"/>
        <Button
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/today"
            android:id="@+id/btn_today"/>
        <Button
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/record"
            android:id="@+id/btn_record"/>

    </LinearLayout>

</LinearLayout>  