<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/event_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_name"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/event_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginLeft="10dp" />

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2px"
        android:background="@android:color/darker_gray"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/time_picker_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_time"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:textSize="15dp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2px"
        android:background="@android:color/darker_gray"
        />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/complete_time_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/complete_time"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/complete_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:textSize="15dp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2px"
        android:background="@android:color/darker_gray"
        />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sound"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/sound_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:textSize="15sp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2px"
        android:background="@android:color/darker_gray"
        />
</LinearLayout>